<resources>
    <string name="app_name">MyNews</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="article_title">Article Title</string>
    <string name="date">Date</string>
    <string name="sectionSubsection">SectionSubsection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mynews">MyNews</string>
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="science">Science</string>
    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin date</string>
    <string name="select_a_date">Select a date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="end_date">End date</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="environment">Environment</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="movies">Movies</string>
    <string name="technology">Technology</string>
    <string name="weather">Weather</string>
    <string name="other_categories">Other categories</string>
    <string name="about_text_1">The MyNews application is a study project.</string>
    <string name="about_text_2">It corresponds to project 5 of the \"DA - Android\" course in the
        OpenClassRooms school.</string>
    <string name="about_text_3">The application allows you to view articles from the NewYorkTimes
        and receive notifications on a category of articles sought.</string>
    <string name="main_categories">Main Categories</string>
    <string name="menu">Menu</string>
    <string name="when_a_category_is_selected">When a category is selected :</string>
    <string name="returns_to_the_corresponding_tab_of_the_home_screen_for_the_main_categories">- Returns to the corresponding tab of the home screen for the main categories.</string>
    <string name="it_opens_a_new_window_for_the_other_categories">- It opens a new window for the other categories.</string>
    <string name="toolbar">Toolbar</string>
    <string name="search_help_activity">Search :</string>
    <string name="you_must_have_selected_one_term_and_at_least_one_category_the_search_result_is_displayed_in_a_new_window">You must have selected one term and at least one category. The search result is displayed in a new window.</string>
    <string name="notification">Notification :</string>
    <string name="notification_is_sent_daily_if_one_or_more_articles_have_been_published_in_the_last_24_hours_you_must_have_selected_one_term_and_at_least_one_category">Notification is sent daily if one or more articles have been published in the last 24 hours. You must have selected one term and at least one category.</string>
    <string name="articleimage">ArticleImage</string>
    //TOAST\\
    <string name ="no_query">Please enter a query.</string>
    <string name ="no_category">Please choose at least one category.</string>
    <string name ="no_query_and_category">Please enter a query and choose at least one category.</string>
</resources>
