<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/search_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/menu_activity_main_notifications"
        app:showAsAction="never"
        android:title="@string/notifications">
    </item>
    <item
        android:id="@+id/menu_activity_main_help"
        app:showAsAction="never"
        android:title="@string/help">
    </item>
    <item
        android:id="@+id/menu_activity_main_about"
        app:showAsAction="never"
        android:title="@string/about">
    </item>
</menu>